--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Charles Dicken's London</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwWyTm35h19EvIn_4VAb86JV5KrWtehiU&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?&key=AIzaSyATyhBfqwj5-eLhvLFJH5fFIhBzdEmj-MQ&libraries=places"></script>
   </head>
   <body>
     <noscript>
