some styling to home page and maps

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Charles Dicken's London</title>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwWyTm35h19EvIn_4VAb86JV5KrWtehiU&libraries=places"></script>
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
   </head>
   <body>
     <noscript>
