--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Charles Dicken's London</title>
+    <title>britain by the book</title>
     <script src="https://maps.googleapis.com/maps/api/js?&key=AIzaSyATyhBfqwj5-eLhvLFJH5fFIhBzdEmj-MQ&libraries=places"></script>
   </head>
   <body>
