--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
     <title>Britain By The Book</title>
-  
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfidJ-EdhZr2udtugMuq-GAhgcX-N3Ync&libraries=places"></script>
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 
   </head>
