--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <noscript>
-      <strong>This app does not work without JavaScript enabled... Please enable it to continue.</strong>
+      <strong>This app does not work without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
   </body>
